tests/compile_fail/missing_file.stderr
error: Failed to read "$DIR/tests/compile_fail/nonesuch.rs": No such file or directory (os error 2)
 --> tests/compile_fail/missing_file.rs:2:37
  |
2 |     let _: &str = read_doc::module!("nonesuch.rs");
  |                                     ^^^^^^^^^^^^^
